@@ -38,6 +38,9 @@
 
 			#ifnotnull $maximum_size
 			@{ self.$name.SetMaxSize( $maximum_size ) #nl @}
+
+			#ifparenttypeequal "toolbar_form"
+			@{ self.AddControl( self.$name ) #nl @}
 		</template>
 
 		<!-- wxKeyEvent -->
