@@ -5,6 +5,7 @@
   more than once) (spedgenius)
 * FS#456 - App crashes when you double click on file_path property
 * FS#459 - duplicate python code generated on toolbar add widget
++ Any widget (wxWindow) can be added also to ToolBarForm (stand-alone toolbar class).
 
 02/10/2010 Version 3.01.67 (Beta)
 * Fixed resolving of name conflicts in stand-alone toolbars and menubars.
